--- a/novo/Nodejs-form-main/views/configuracoes.hbs
+++ b/novo/Nodejs-form-main/views/configuracoes.hbs
@@ -72,14 +72,14 @@
     </div>
     <div class="content">
 
-        <form action="/update" method="post">
+        <form action="/update" method="POST">
             <div class="email_senha">
                 <input type="text" id="use_nome" name="use_nome" placeholder="Nome">
                 <input type="email" id="use_email" name="use_email" placeholder="Email" >
             </div>
             <div class="email_senha"> 
                 <input type="password" id="use_senha" name="use_senha" placeholder="Senha">
-                <input type="text" id="confirmaSenha" name="confirmaSenha" placeholder="Confirmar Senha" >
+                <input type="password" id="confirmaSenha" name="confirmaSenha" placeholder="Confirmar Senha" >
             </div>
         
             <div class="email_senha">
@@ -95,7 +95,7 @@
                 <input type="text" id="UF" name="UF" placeholder="UF">
             </div>
             </div>
-            <button class="baixo" type="button"> Salvar </button>
+            <button class="baixo" type="submit"> Salvar </button>
         </form>
     </div>
 </div>
