--- a/novo/Nodejs-form-main/views/login.hbs
+++ b/novo/Nodejs-form-main/views/login.hbs
@@ -22,7 +22,7 @@
 
     <div class="conteudo">
  
-        <img src="/Imagens/logo.png" alt="logo" class="logo">
+       <a href="/"> <img src="/Imagens/logo.png" alt="logo" class="logo"> </a> 
     <div class="bem_vindo">
         <h2> Bem vindo(a) ao GLUB</h2>
     </div>
