--- a/novo/Nodejs-form-main/public/configuracoes/style.css
+++ b/novo/Nodejs-form-main/public/configuracoes/style.css
@@ -77,7 +77,7 @@ input{
     border-radius: 20px;
     border: 1px solid rgba(121, 121, 121, 0.9);
     padding: 24px 14px 16px 14px;
-    font-size: 20px;
+    font-size: 20px !important;
   }
 
 .tudo{
