--- a/novo/Nodejs-form-main/views/login.hbs
+++ b/novo/Nodejs-form-main/views/login.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Login </title>
+    <title> GLUB • Login </title>
     <link rel="icon" href="/Imagens/logo-redonda.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/login/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,11 +28,11 @@
     </div>
 <form action="/login" method="POST">
     <div class="login">
-        <input type="text" id="use_email" name="use_email" placeholder="Email">
+        <input type="text" id="use_email" name="use_email" placeholder="Email" required>
         
     </div> 
     <div class="senhaaa">
-        <input type="password" id="use_senha" name="use_senha" class="senha" placeholder="Senha">
+        <input type="password" id="use_senha" name="use_senha" class="senha" placeholder="Senha" required>
         <button type="button" class="ver-senha"> <img src="/Imagens/no-view.svg" alt="imagem" class="imagem-view"></button>
     </div>
     <div class="esqueceu_senha"> 
