--- a/novo/Nodejs-form-main/views/perfil.hbs
+++ b/novo/Nodejs-form-main/views/perfil.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Perfil </title>
+    <title> GLUB • Perfil </title>
     <link rel="stylesheet" href="/perfil/style.css">
     <link rel="stylesheet" href="/perfil/responsivo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
