--- a/novo/Nodejs-form-main/views/configuracoes.hbs
+++ b/novo/Nodejs-form-main/views/configuracoes.hbs
@@ -92,13 +92,15 @@
             </div>
             <div class="email_senha">
                 <input type="text" id="cidade" name="cidade" placeholder="Cidade">
-                <input type="text" id="UF" name="UF" placeholder="UF">
+                <input type="text" id="UF" name="UF" placeholder="UF" >
             </div>
             </div>
-             {{#if message }}
-                <h4 class="alerta">{{message}}</h4>
-            {{/if}}
-            <button class="baixo" type="submit"> Salvar </button>
+           
+                <h4 class="alerta">{{aviso}}</h4>
+           
+
+                <button class="baixo" type="submit" value="update" name="update"> Salvar </button>
+         
         </form>
     </div>
 </div>
