--- a/novo/Nodejs-form-main/views/home.hbs
+++ b/novo/Nodejs-form-main/views/home.hbs
@@ -35,6 +35,10 @@
     </div>
 </header>
 
+{{#if aviso }}
+            <h4 class="alerta">{{aviso}}</h4>
+        {{/if}}
+
 {{!-- <div class="email-verificacao">
     <h3>Um email foi enviado para a verificação da sua conta</h3>
 </div> --}}
