--- a/novo/Nodejs-form-main/views/login.hbs
+++ b/novo/Nodejs-form-main/views/login.hbs
@@ -44,7 +44,7 @@
             <h4 class="alerta">{{message}}</h4>
         {{/if}}
     <div class="entrar">
-        <button class="btn_entrar" type="submit" value="Enviar"> Entrar</button>
+        <button class="btn_entrar" type="submit" value="login" name="login"> Entrar</button>
     </div>
 
     <div class="divisor"></div>
