--- a/views/feed.hbs
+++ b/views/feed.hbs
@@ -87,15 +87,19 @@
     </a>
 
         <div class="outras-noticias">
-                
             {{#each postagens}}
-                <img src="{{img_nome}}" alt="">
-                <h1>{{post_titulo}}</h1> 
-                Conteudo: {{post_conteudo}}<br>
-                Data: 	{{{dateFormat post_data "DD/MM/YYYY"}}}<br>
-                <br>
-                <hr>
-            {{/each}}
+            <a href="/noticia/{{post_titulo}}">
+                
+                    
+                    <img src="{{img_nome}}" alt="">
+                    <h1>{{post_titulo}}</h1> 
+                    Conteudo: {{post_conteudo}}<br>
+                    Data: 	{{{dateFormat post_data "DD/MM/YYYY"}}}<br>
+                    <br>
+                    <hr>
+                {{/each}}
+
+            </a>
 
           
             
