--- a/views/comentario-dentro.hbs
+++ b/views/comentario-dentro.hbs
@@ -4,76 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comentário aprovar</title>
+    <title>Editar dentro</title>
     <link rel="shortcut icon" href="/Imagens/logo-redonda.png" type="image/x-icon">
-    <link rel="stylesheet" href="/comentarios/style.css">
+    <link rel="stylesheet" href="/comentario-dentro/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;800&display=swap" rel="stylesheet">
-    <link rel="icon" href="/Imagens/logo-redonda.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header> 
+    <header>
         <img src="/Imagens/logo-redonda.png" alt="logo" class="logo">
-        <div class="prefeitura"> 
-            <h3>Prefeitura Municipal de Tupã</h3>
-           <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                     <img src="/Imagens/avatar prefeitura.jpg" alt="prefeitura">
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="/sair">Sair</a></li>
-                </ul>
-              </div>
+        <div class="prefeitura">
+            <p>Prefeitura Municipal de Tupã</p>
+            <img src="/Imagens/avatar prefeitura.jpg" alt="prefeitura" class="img_prefeitura">
         </div>
     </header>
 
     <div class="divisor1"></div>
-<div class="conteudo_principal">
-    <div class="icones_navegacao"> 
+<div class="principal">
+    <div class="lado-esquerdo">
         <ul>
             <div>
                 <a href="/postagens">
                     <li><img src="/Imagens/Icones/Gerenciamento/Postagens.svg" alt="postagens"></li>
                     <li>Postagens</li>
-                </a>
+                </a>    
             </div>
             <div class="selecionado"> 
                 <a href="/comentarios">
                     <li><img src="/Imagens/Icones/Gerenciamento/Comentarios.svg" alt="comentarios"></li>
                     <li>Comentários</li>
                 </a>
-            </div>
-            <div> 
+            </div>    
+            <div>
                 <a href="/mensagens"> 
                     <li><img src="/Imagens/Icones/Gerenciamento/Mensagens.svg" alt="mensagens"></li>
                     <li>Mensagens</li>
-                </a>
+                </a>    
             </div>
-            <div> 
+            <div>
                 <a href="/editar"> 
                     <li><img src="/Imagens/Icones/Gerenciamento/Editar-post.svg" alt="editar-postagem"></li>
                     <li>Editar post</li>
-                </a>
+                </a>    
             </div>
         </ul>
     </div>
 
     <div class="divisor2"></div>
-    <div class="comentarios"> 
-        {{#each comentarios}} 
-        <a href="/comentario-dentro/{{coment_id}}"> 
+
+<div class="lado-direito">
+
+    {{#each comentarios_dentro}} 
             <h1>{{use_nome}}</h1> 
             <h1>{{coment_texto}}</h1> 
             <hr>
-        </a>   
-        {{/each}}
+       {{/each}}
+
+
+    {{!-- <div class="imagem-escrita">
+        <div class="imagem">
+            <img src="/Imagens/avatrar vilmar gongas.png" alt="">
+        </div>
+        <div class="escrita"> 
+            <h3>Vilmar Gongas</h3>
+            <h4>11/09/2022</h4>
+        </div>   
     </div>
+
+    <div class="quadrado">
+        
+    </div>
+
+    <div class="aprovar-recusar">
+        <div class="aprovar">
+            <input type="submit" value="Aprovar">
+        </div>
+        <div class="recusar">
+            <input type="submit" value="Recusar">
+        </div>
+    </div> --}}
+
+</div>
+
 </div>
 </body>
 </html>
