--- a/views/editar-dentro.hbs
+++ b/views/editar-dentro.hbs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar</title>
+    <title>Editar dentro</title>
     <link rel="shortcut icon" href="/Imagens/logo-redonda.png" type="image/x-icon">
-    <link rel="stylesheet" href="/editar/style.css">
+    <link rel="stylesheet" href="/editar-dentro/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
@@ -18,33 +18,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
-
     <header>
-        <img src="/Imagens/logo-redonda.png" alt="logo">
-
-        <div class="prefeitura-campo">
-             <h3>Prefeitura Municipal de Tupã</h3>
-            <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                     <img src="/Imagens/avatar prefeitura.jpg" alt="prefeitura">
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="/sair">Sair</a></li>
-                </ul>
-              </div>
-           
-           
+        <img src="/Imagens/logo-redonda.png" alt="logo" class="logo">
+        <div class="usuario">
+          <p> Prefeitura Municipal de Tupã </p>
+          <img src="/Imagens/avatar prefeitura.jpg" alt="avatar">
         </div>
-
-        
     </header>
-
+   
     <div class="divisor1"></div>
-
     <main>
         <div class="conteudo-principal">
-            <div class="icones-navegacao">
-                <ul>
+          <div class="icones-img">
+                <div class="icones-navegacao">
+                    <ul>
                     <div>
                         <a href="/postagens">
                             <li><img src="/Imagens/Icones/Gerenciamento/Postagens.svg" alt="postagens"></li>
@@ -69,25 +56,54 @@
                             <li>Editar post</li>
                         </a>
                     </div>
-                </ul>
-
+                    </ul>
+                </div>
             </div>
+
             <div class="divisor2"></div>
-    
-            <div class="noticias">
-                {{#each postagens}}
-            <a href="/editar-dentro/{{post_id}}">
-                
-                    
+
+             {{#each conteudo}}
                     <img src="{{img_nome}}" alt="">
-                    
                     <h1>{{post_titulo}}</h1> 
                     Conteudo: {{post_conteudo}}<br>
                     Data: 	{{{dateFormat post_data "DD/MM/YYYY"}}}<br>
                     <br>
                     <hr>
                 {{/each}}
+            
+            
+            {{!-- <section>
+                <div class="titulo_noticia">
+                    <h3> Como reciclar corretamente</h3>
+                </div>
+
+                <div class="img_noticia">
+                    <img src="/Imagens/imagens noticiais/recii.jpg" alt="imagemmmm notícia">
+                </div>
+
+                <div class="txt_noticia">
+        
+                    <p> &nbsp; Recentemente Emanuel da Silva, coletor da cidade de Tupâ, se machucou ao pegar um sacola com pedaço de vidro descartado incorrteamente, tendo que fazer quatro pontos em sua mão. Por isso viemos aqui apresentar para vocês o modo correto de descartar o lixo além de onde e como separar cada um. <br>
+                    &nbsp;Começando primeiro pelos produtos de vidro, eles devem ser colocados em algum outro local como caixa de leite por exemplo, e na sua sacola deve ter escrito a caneta avisando que é vidro o conteúdo de dentro, facilitando quem recolhe o lixo e quem acaba mexendo para encontrar algo.
+                    </p> 
+                </div> 
+
+                <div class="coisas">
+                    <div class="check">
+                            <input type="checkbox" id="Fixar" name="Fixar"
+                    checked>
+                    
+                            <label for="Fixar">Fixar</label>
+                        
+                            <input type="checkbox" id="Ativar" name="Ativar"
+                    checked>
+                            
+                            <label for="Ativar">Ativar</label>
+                    </div>
+                    <button class="botao" type="button">Editar</button> 
+                </div>
+            </section> --}}
         </div>
-</main>
+    </main>
 </body>
 </html>
