--- a/views/postagens.hbs
+++ b/views/postagens.hbs
@@ -69,24 +69,17 @@
             <div class="divisor2"></div>
 
         <div class="todos">
-                
-                    <input type="text" placeholder="Título" class="titulo"> </input>
-                    <div class="form-input">
+        <form action="/cadGerenciamento" method="POST" enctype="multipart/form-data">
+            <input type="text" placeholder="Título" name="titulo" class="titulo"> </input>
+                <div class="form-input">
+                        <div class="preview">
+                            <img id="file-ip-1-preview">
+                        </div>
+                        <input type="file" title="" name="sampleFile" id="file-ip-1" accept="image/*" onchange="showPreview(event);">
+                </div>    
+             
 
-                        <form action="/cadGerenciamento" method="POST" enctype="multipart/form-data">
-                            <div class="preview">
-                                <img id="file-ip-1-preview">
-                            </div>
-                            <input type="file" title="" name="sampleFile" id="file-ip-1" accept="image/*" onchange="showPreview(event);">
-                            <input type="submit">
-                        </form>
-                    </div>    
-                <!-- <div class="vazio"> 
-                    <input placeholder="Imagem"> </input>
-                    <img src="/Imagens/Icones/Gerenciamento/imagemcinza.png" alt="">
-                </div> -->
-
-                    <input type="text" placeholder="Texto" class="texto"> </input>
+            <input type="text" placeholder="Texto" name="texto" class="texto"> </input>
         
             <div class="rodape">
                 <div class="checkbox">
@@ -95,8 +88,13 @@
                 </div>
                 <input type="submit" value="Postar">
             </div>
+            
+            {{#if message }}
+            <h4 class="alerta">{{message}}</h4>
+            {{/if}}
 
         </div>
+    </form>
         <script src="/postagens/script.js"></script>
 </body>
 </html>
