--- a/views/editar.hbs
+++ b/views/editar.hbs
@@ -79,7 +79,7 @@
             <a href="/editar-dentro/{{post_id}}">
                 
                     
-                    <img src="{{img_nome}}" alt="">
+                    <img src="/Imagens/{{img_nome}}" alt="">
                     
                     <h1>{{post_titulo}}</h1> 
                     Conteudo: {{post_conteudo}}<br>
