--- a/views/noticia.hbs
+++ b/views/noticia.hbs
@@ -56,7 +56,7 @@
 <section>
 
      {{#each conteudo}}
-                    <img src="{{img_nome}}" alt="">
+                    <img src="/Imagens/{{img_nome}}" alt="">
                     <h1>{{post_titulo}}</h1> 
                     Conteudo: {{post_conteudo}}<br>
                     Data: 	{{{dateFormat post_data "DD/MM/YYYY"}}}<br>
@@ -101,25 +101,8 @@
         </div> --}}
     </div>
     <div class="divisor"></div>
-    <div class="prefeitura">
-        <div class="prefe_nome">
-        <div>
-        <img src="/Imagens/avatar prefeitura.jpg" alt="prefeitura" class="img_prefe">
-            <h3> Prefeitura de Tupã </h3>
-        </div>
-            <h2>Postado em: 11/09/2022</h2> <br>
-        </div>
-            <h4>Bom dia, depende muito da onde você mora, mas vidro se tem que colocar no dia que for lixo seletivo.</h4>
-        <div class="gostei"> 
-            <div> 
-                <button type="submit" class="like">  <img src="/Imagens/Icones/Like.svg" alt="like"> </button> <p class="num"> 0 </p>
-        
-                <button type="submit" class="deslike"> <img src="/Imagens/Icones/Deslike.svg" alt="deslike"> </button> <p class="num"> 0 </p>
-            </div>
-        </div>
     </div>
-    </div>
-    <script src="/Programação/Visao Usuario/Camila/notícia/index.js"></script>
+    <script src="/noticia/index.js"></script>
 </div>
 </body>
 </html>
