--- a/views/feed.hbs
+++ b/views/feed.hbs
@@ -61,7 +61,7 @@
             <a href="/noticia/{{post_id}}">
                 
                     
-                    <img src="{{img_nome}}" alt="">
+                    <img src="/Imagens/{{img_nome}}" alt="">
                     <h1>{{post_titulo}}</h1> 
                     Conteudo: {{post_conteudo}}<br>
                     
@@ -100,9 +100,8 @@
         <div class="outras-noticias">
             {{#each postagens}}
             <a href="/noticia/{{post_id}}">
-                
                     
-                    <img src="{{img_nome}}" alt="">
+                    <img src="/Imagens/{{img_nome}}" alt="">
                     
                     <h1>{{post_titulo}}</h1> 
                     Conteudo: {{post_conteudo}}<br>
