--- a/views/noticia.hbs
+++ b/views/noticia.hbs
@@ -70,7 +70,7 @@
         <img src="/Imagens/avatar feminino.jpg" alt="imagem-usuario" class="usuario"> 
         <form action="/comentar" method="POST">
             <input type="text" id="coment" name="coment" placeholder="Adicione um comentário">
-            <button type="submit" value="Enviar"> Enviar </button>
+            <button type="submit" value="Enviar" onClick="window.location.reload();"> Enviar </button>
     </form>
     </div>
     <div class="comentario">
