--- a/views/comentario-dentro.hbs
+++ b/views/comentario-dentro.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar dentro</title>
+    <title>Dentro do comentário</title>
     <link rel="shortcut icon" href="/Imagens/logo-redonda.png" type="image/x-icon">
     <link rel="stylesheet" href="/comentario-dentro/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,13 +13,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;800&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <img src="/Imagens/logo-redonda.png" alt="logo" class="logo">
         <div class="prefeitura">
-            <p>Prefeitura Municipal de Tupã</p>
-            <img src="/Imagens/avatar prefeitura.jpg" alt="prefeitura" class="img_prefeitura">
+              <h3>Prefeitura Municipal de Tupã</h3>
+            <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                     <img src="/Imagens/avatar prefeitura.jpg" alt="prefeitura">
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="/sair">Sair</a></li>
+                </ul>
+              </div>
+           
         </div>
     </header>
 
@@ -59,12 +69,24 @@
 <div class="lado-direito">
 
     {{#each comentarios_dentro}} 
-        <h1>{{use_nome}}</h1> 
-          <input type="text" name="coment_texto" value="{{coment_texto}}"> 
-            <hr>
-
-            <button type="submit">Aprovar</button>
-            <button type="submit">Reprovar</button>
+    <div class="imagem-escrita">
+        <div class="imagem">
+            <img src="/Imagens/avatrar vilmar gongas.png" alt="">
+        </div>
+        <div class="escrita">
+            <h3>{{use_nome}}</h3> 
+            <h4>11/09/2022</h4>
+        </div>
+    </div>
+        <form action="/uparComentario" method="post">
+            <input type="text" name="coment_texto" value="{{coment_texto}}" class="conteudo" readonly> 
+            <div class="aprovar-recusar">
+                <div class="recusar">
+                    <input type="submit" value="Reprovar"></input>
+                </div>
+            </div>
+        </form>
+            
        {{/each}}
 
 
